projects/vb6parse/snapshots/syntax/library/statements/app_activate/appactivate_preserves_whitespace.snap
---
source: projects/vb6parse/src/syntax/library/statements/system_interaction/app_activate.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: AppActivateStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: AppActivateKeyword
                  text: AppActivate
                - kind: Whitespace
                  text: "   "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: StringLiteralExpression
                          children:
                            - kind: StringLiteral
                              text: "\"MyApp\""
                    - kind: Whitespace
                      text: "  "
                    - kind: Comma
                      text: ","
                    - kind: Whitespace
                      text: "  "
                    - kind: Argument
                      children:
                        - kind: BooleanLiteralExpression
                          children:
                            - kind: FalseKeyword
                              text: "False"
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
